	* replace dtrace: execute a custom action by phone

- New packages, libs, modules:
    * avahi 0.6.30
    * dbus 1.5.6
    * protobuf-c 0.15
    * smusbutil 1.1

- Updated tools and hooks:
	* get_ip:
	 + default method could be set via webif
	 + cache for extquery (1 minunte)

- Updated patches:
    * Update freetzmount patch (by hermann, updated by cuma)

- Updated packages and libs:
    * bind 9.8.0-P4
    * callmonitor 1.19.3
    * curl 7.23.1
    * dnsmasq 2.59
    * dosfstools 3.0.12
    * dropbear 2011.54
    * ffmpeg 0.8.7
    * gdb 7.3.1
    * git 1.7.7.4
    * httpry: 0.1.6 and webinterface added
    * iptables 1.4.11.1
    * libevent 2.0.16
    * libfreetz 0.5
    * libftdi 0.19
    * libosip2 3.5.0
    * libpng 1.2.46
    * lighttpd 1.4.29
    * minidlna 1.0.22
    * ncurses 5.9
    * netatalk 2.2.1
    * netpbm 10.35.82
    * ngircd 18
    * openvpn 2.2.1
    * pcre 8.13
    * php 5.3.8
    * Pingtunnel 0.72
    * radvd 1.8.3
    * readline 6.2
    * rsync 3.0.9
    * ser2net 2.7
    * siproxd 0.8.1
    * slang 2.2.4
    * squid 3.0.STABLE26
    * sqlite 3.7.9
    * subversion 1.7.1
    * tinc 1.0.15
    * tmux 1.5
    * tor 0.2.2.34
    * transmission 2.33
    * truecrypt 7.1
    * umurmur 0.2.8
    * wget 1.13.4

- Remove packages, libs, modules, tools:
    * Remove getcons patch (see #1026 for details)

- Firmware updates:
    * Please see FIRMWARES for the list of currently supported boxes and firmwares.

- BusyBox:
	* Updated to version 1.19.3
	* Enhanced blkid und findfs support for busybox (used in freetzmount)

- Web interface:

- Other stuff:

=== Freetz-1.2-stable ===

- Build system:
  * fakeroot: bump version to 1.15.1
  * kernel-toolchain:
   + Bump binutils version to 2.18
   + Add gcc version 4.4.6
   + Add binutils version 2.21.52.0.2
   + Use gcc-3.4.6 for kernel versions 2.6.13.1 and 2.6.19.2
   + Use gcc-4.4.6 for kernel versions 2.6.28 and 2.6.32.21
   + Update download toolchains
  * target-toolchain: