@@ -35,6 +35,7 @@ Latest changes:
 
 - Updated patches:
     * Update freetzmount patch (by hermann, updated by cuma)
+    * modify umtsd: only start if a known modem is detected
 
 - Updated packages and libs:
     * bind 9.8.0-P4
